# MakeNovel

./: .gitignore  AGENTS.md  Plearning.md  README.md  export_db.py  migrate_db.py  package.json  start.bat  test_all.py  test_api.py  口述-全流程.md  口述.md  简述.md  面试阐述.md
Agent/: pyproject.toml
Agent/makenovel_agent/: __init__.py  __main__.py  cli.py  llm.py  pipeline.py  sample_data.py
Agent/makenovel_agent/agents/: __init__.py  creator.py  polisher.py  preparer.py  reviewer.py  reviser.py
Agent/makenovel_agent/models/: __init__.py  character.py  messages.py  outline.py  summary.py  world.py
Agent/makenovel_agent/skills/: polisher.md  preparer.md  reviewer.md  reviser.md  writer.md
Agent/sample_data/: characters.json  outline.json  summaries.json  world_settings.json
backend/: .env.example  main.py  requirements.txt  storage.py  大纲：矛盾铺设与解决.md
backend/app/: agent.py  memory.py  pipeline.py  prompts.py  tools.py
backend/app/api/: __init__.py  ai.py  chapters.py  characters.py  novels.py  outlines.py  settings.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  ai.py  chapter.py  character.py  novel.py  outline.py  setting.py
backend/app/services/: __init__.py  agent.py  context.py  llm.py  rag.py  summary.py
backend/app/skills/: agent.md  brainstorm.md  (+8 more)
backend/routers/: agent.py  canvas.py  characters.py  events.py  novels.py  outlines.py  snapshots.py  style.py  world.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+32 files in other folders)
