[project]
name = "makenovel-agent"
version = "0.1.0"
description = "Novel writing agent pipeline with structured I/O"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
novel-agent = "makenovel_agent.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
